# pyquipu

./: .gitignore  DEVELOPING.md  PROMPT.md  README.md  TODO.md  bootstrap.py  config.py  conftest.py  content.md  dev-requirements.txt  dev_setup.fish  dev_setup.sh  logger_config.py  main.py  metadata.json  migrate_v1_to_v1.1.sh  pyproject.toml  pytest.ini  requirements.txt  verify_sandbox.py
.axon/: memory.md
.github/workflows/: ci.yml
acts/: basic.py  check.py  git.py  read.py  refactor.py  shell.py
commands/: run.py
core/: controller.py  engine.py  exceptions.py  executor.py  git_db.py  history.py  parser.py  types.py
docs/03_user_guide/: 01_core_concepts.md  02_cli_reference.md
docs/05_developer_guide/: 01_architecture.md
examples/: install_demo_plugins.md
locales/zh/: cli.json  runtime.json
scripts/: check_locales.py
snapshot/: bootstrap.py  dev-requirements.txt  install_quipu.py  pyproject.toml  refactor_tests_v2.py
snapshot/scripts/: restructure_tests.py
snapshot/tests/: helpers.py
snapshot/tests/application/: conftest.py  test_controller.py  test_utils.py
snapshot/tests/cli/: test_export_command.py  test_navigation_commands.py  test_query_commands.py  test_unfriendly_paths.py
snapshot/tests/engine/: test_deduplication.py  test_engine.py
snapshot/tests/integration/: conftest.py  test_cli_workflow.py  test_sync_modes.py  test_sync_workflow.py  test_workspace_invariance.py
snapshot/tests/runtime/: conftest.py  test_parser_robustness.py
snapshot/tests/runtime/acts/: test_shell.py
tests/: conftest.py  helpers.py  test_arg_strategy.py  test_auto_detect.py  test_branching.py  test_check.py  test_engine.py  test_git.py  test_git_db.py  test_graph_loader.py  test_head_and_root.py  test_idempotent_node.py  test_integration_v2.py  test_isolation.py  test_migration.py  test_navigation.py  test_ops.py  test_plugins.py  test_read.py  test_root_invariance.py  test_sqlite_reader_integrity.py  test_storage_integration.py  test_storage_reader.py  test_storage_writer.py  test_ui_logic.py  test_ui_reachability.py
tests/application/: conftest.py  test_controller.py  test_utils.py
tests/cli/: conftest.py  test_cache_commands.py  test_cli_interaction.py  test_export_command.py  test_navigation_commands.py  test_query_commands.py  test_tui_logic.py  test_tui_reachability.py  test_unfriendly_paths.py  test_view_model.py  test_workspace_commands.py
tests/engine/: test_branching.py  test_checkout_behavior.py  test_config.py  test_deduplication.py  test_engine.py  test_engine_memory.py  test_git_db.py  test_git_reader.py  test_git_writer.py  test_head_tracking.py  test_navigation.py
tests/integration/: test_cli_workflow.py  test_idempotent_node.py  test_storage_selection.py  test_sync_modes.py  test_sync_workflow.py  test_workspace_invariance.py  test_workspace_isolation.py
tests/runtime/: conftest.py  test_arg_strategy.py  test_parser_and_basic_acts.py  test_parser_auto_detect.py  test_parser_robustness.py  test_plugin_loader.py  test_plugin_resilience.py
tests/tests/: helpers.py
ui/: __init__.py  tui.py
(+11 files in other folders)
