[project]
name = "quipu-monorepo"
version = "0.1.0"
description = "Quipu Development Monorepo"
requires-python = ">=3.10"
dependencies = []

[tool.uv]
# 将 packages 下的所有包纳入工作区管理
workspace.members = ["packages/*"]

[tool.pytest.ini_options]
pythonpath = [
  "packages/quipu-interfaces/src",
  "packages/quipu-engine/src",
  "packages/quipu-runtime/src",
  "packages/quipu-cli/src",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"